# fragile-notepad

./: .gitignore  .gitmodules  Cargo.toml  DEVELOPMENT.md  LICENSE
.github/workflows/: ci.yml  nightly.yml
assets/syntax/: folding-hints.xml  outline-parsers.xml
examples/: analyze_perf_trace.rs  backend_switch_probe.rs  profile_edit_path.rs  profile_render.rs  profile_tiny_skia_text.rs
patches/encoding_rs/: BASE_REVISION  oem-code-pages.patch
patches/iced/: BASE_REVISION  fragile-notepad-iced.patch
scripts/: ci.ps1  ci.sh  generate_icon_assets.ps1  generate_icon_assets.sh  generate_tango_rgba.py  rasterize_svg_icons.py  setup-vendor.ps1  setup-vendor.sh  vendor-patch.ps1  vendor-patch.sh
src/: app.rs  assets.rs  ipc.rs  lib.rs  main.rs  message.rs  perf_trace.rs  search_dialog.rs  settings_dialog.rs  startup.rs
src/app/: editor.rs  editor_ops.rs  editor_tests.rs  files.rs  menu.rs  rendering.rs  search.rs  settings.rs  shortcuts.rs  tests.rs
src/core/: commands.rs  document.rs  encoding.rs  mod.rs  search.rs  settings.rs  shortcuts.rs  workspace.rs
src/editor/: buffer.rs  decoration.rs  delimiter.rs  fold.rs  history.rs  layout.rs  mod.rs  movement.rs  position.rs  render.rs  syntax_hints.rs  viewport.rs  widget.rs  word.rs
src/ipc/: unix.rs  windows.rs
src/platform/: mod.rs  paths.rs
src/services/: atomic_write.rs  chunked_file.rs  (+3 more)
tests/: core_document.rs  core_search.rs  core_workspace.rs  editor_history.rs  editor_integration.rs  editor_model.rs  editor_settings.rs  editor_widget.rs  large_file_loading.rs  render_icon_parity.rs  startup.rs
(+70 files in other folders)
