[package]
name = "fragile-notepad"
version = "0.1.0"
edition = "2024"

[features]
default = ["hybrid-rendering"]
hybrid-rendering = ["iced/wgpu"]

[dependencies]
encoding_rs = { path = "vendor/encoding_rs" }
futures = "0.3"
iced = { path = "vendor/iced", default-features = false, features = ["tiny-skia", "tokio", "image-without-codecs", "highlighter", "advanced", "web-colors", "x11", "wayland"] }
rfd = "0.16"
regex = "1"
ropey = "1"
roxmltree = "0.20"
tokio = { version = "1", features = ["fs"] }
unicode-segmentation = "1"
unicode-width = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tiny-skia = "0.11"

[profile.release]
lto = "thin"
panic = "abort"
strip = true
